# rm_hardware_driver

./: .gitignore  README.md  deps.repos
log/: latest_test
rm_base/: CMakeLists.txt  README.md  package.xml  protocol.md
rm_base/config/: rm_base.yaml
rm_base/include/rm_base/: buffer_processor_factory.hpp  crc.hpp  processor_interface.hpp  protocol_types.hpp  register_macro.hpp  robot_base_node.hpp
rm_base/launch/: rm_base.launch.py
rm_base/src/: buffer_processor_factory.cpp  robot_base_node.cpp
rm_base/src/buffer_processor/: event_data_processor.cpp  game_result_processor copy.cpp  game_result_processor.cpp  game_robot_hp_processor.cpp  game_robot_pos_processor.cpp  game_status_processor.cpp  gimbal_imu_processor.cpp  joint_state_processor.cpp  power_heat_data_processor.cpp  robot_buff_processor.cpp  robot_bullet_remain_processor.cpp  robot_command_processor.cpp  robot_hurt_processor.cpp  robot_interactive_data_processor.cpp  robot_shoot_data_processor.cpp
rm_base/test/: CMakeLists.txt  test_event_data.cpp  test_event_data_processor.cpp  test_game_result_processor.cpp  test_game_robot_hp_processor.cpp  test_game_robot_pos_processor.cpp  test_game_status_processor.cpp  test_gimbal_imu_processor.cpp  test_joint_state_processor.cpp  test_power_heat_data_processor.cpp  test_processor_factory.cpp  test_robot_buff_processor.cpp  test_robot_bullet_remain_processor.cpp  test_robot_bullet_remaining_processor.cpp  test_robot_command_processor.cpp  test_robot_hurt_processor.cpp  test_robot_interactive_data_processor.cpp  test_robot_shoot_data_processor.cpp
rm_interfaces/: CMakeLists.txt  README.md  package.xml
rm_interfaces/msg/: ChassisCmd.msg  Gimbal.msg  GimbalCmd.msg  ShootCmd.msg
rm_interfaces/msg/referee/: EventData.msg  GameResult.msg  GameRobotHp.msg  GameRobotPos.msg  GameRobotStatus.msg  GameStatus.msg  PowerHeatData.msg  RobotBuff.msg  RobotBulletRemain.msg  RobotCommand.msg  RobotHurt.msg  RobotInteractiveData.msg  RobotShootData.msg
